--- a/Core/IRTweaks/Menus/CareerDifficultySettings.json
+++ b/Core/IRTweaks/Menus/CareerDifficultySettings.json
@@ -3261,7 +3261,7 @@
             {
               "ConstantType": "CareerMode",
               "ConstantName": "StartingRandomMechLists",
-              "ConstantValue": "itemCollection_Mechs_Starting_Primitive_Heavy,itemCollection_Mechs_Starting_Primitive_Medium,itemCollection_Mechs_Starting_Primitive_Medium,itemCollection_Mechs_Starting_Primitive_Light,itemCollection_Mechs_Starting_Primitive_VMedium,itemCollection_Mechs_Starting_Primitive_VMedium,itemCollection_Mechs_Starting_Primitive_VLight"
+              "ConstantValue": "itemCollection_Mechs_Starting_Primitive_Heavy,itemCollection_Mechs_Starting_Primitive_Medium,itemCollection_Mechs_Starting_Primitive_Medium,itemCollection_Mechs_Starting_Primitive_Light,itemCollection_Mechs_Starting_Primitive_Heavy,itemCollection_Mechs_Starting_Primitive_Light"
             },
             {
               "ConstantType": "CareerMode",
